[tool.poetry]
name = "pay-service"
version = "0.1.0"
description = ""
authors = ["Ivan <iskiba60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
