[tool.poetry]
name = "pay-service"
version = "0.1.0"
description = ""
authors = ["Ivan <iskiba60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
dynaconf = "^3.2.6"
mypy = "^1.13.0"
ruff = "^0.8.0"
asyncpg = "^0.30.0"
uvicorn = "^0.32.1"
typer = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
